schema/testdata/validation_create_missing_identity/schema.keel
model Todo {
    fields {
        name Text
        identity Identity
    }

    operations {
        create createTodo() with (name)
    }
}
