schema/testdata/errors/create_missing_identity.keel
model Todo {
    fields {
        name Text
        identity Identity
    }

    actions {
        //expect-error:16:26:ActionInputError:the identity field of Todo is not set as part of this create action
        create createTodo() with (name)
    }
}
